--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,20 @@
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	 
+	<div class="promo">
+		<div class="container">
+			<header class="header">
+				<div href="№" class="header__logo">
+					<img src="icons/logo.png" alt="logo">
+				</div>
+				<div class="header_official">
+					
+				</div>
+				<div class="header__contacts">
+					
+				</div>
+			</header>
+		</div>
+	</div>
 </body>
 </html>
