--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,113 @@
 	<div class="promo">
 		<div class="container">
 			<header class="header">
-				<div href="№" class="header__logo">
+				<div href="#" class="header__logo">
 					<img src="icons/logo.png" alt="logo">
 				</div>
-				<div class="header_official">
-					
+				<div class="header__official">
+					Официальный представитель
+					<span>Garmin, Polar, Suunto</span>
 				</div>
 				<div class="header__contacts">
-					
+					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+					<button class="button">заказать звонок</button>
 				</div>
 			</header>
+			<div class="promo__wrapper">
+				<h1 class="promo__header">Подбор пульсометра</h1>
+				<h2 class="promo__subheader">С учетом вашего уровня подготовки</h2>
+				<div class="promo__icons">
+					<div class="promo__icon">
+						<img src="icons/main_screen/timer.png" alt="">
+						Время подбора:
+						10 минут
+					</div>
+					<div class="promo__icon">
+						<img src="icons/main_screen/hand-cart.png" alt="">
+						Бесплатная
+						доставка
+					</div>
+					<div class="promo__icon">
+						<img src="icons/main_screen/messages.png" alt="">
+						Ответим
+						на все вопросы
+					</div>
+				</div>
+				<button class="button button_main">
+					заказать консультацию
+				</button>
+				<div class="promo__link">
+					или
+					<a href="#">перейти в каталог</a>
+				</div>
+			</div>
 		</div>
 	</div>
-</body>
+
+	<div class="advantages">
+		<div class="container">
+			<h2 class="title">
+				Наши преимущества
+			</h2>
+			<div class="advantages__wrapper">
+				<div class="advantages__item">
+					<img src="icons/advantages/cup.png" alt="">
+					<div class="advantages__subtitle">
+						Делимся опытом
+					</div>
+					<div class="advantages__descr">
+						Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегаюь полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+					</div>
+				</div>
+				<div class="advantages__item">
+					<img src="icons/advantages/heart.png" alt="">
+					<div class="advantages__subtitle">
+						Заботимся о здоровье
+					</div>
+					<div class="advantages__descr">
+						Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+					</div>
+				</div>
+				<div class="advantages__item">
+					<img src="icons/advantages/shoe.png" alt="">
+					<div class="advantages__subtitle">
+						Учим бегать
+					</div>
+					<div class="advantages__descr">
+						Помогаем с обучением правильной технике бега! Дружим с крупнейшие школой бега в России - <a href="#">I LOVE RUNNING</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="consultat">
+		<div class="container">
+			<h2 class="title title_left">
+				Получите бесплатную консультацию <br>
+				 по подбору пульсометра
+			</h2>
+			<div class="consultation__descr">
+				Просто заполните форму заявки <br>
+				и мы перезвоним вам в течении 10 минут
+			</div>
+			<form class="feed-form" action="#"><!-- required означает, что данная строка обязательна к заполнению -->
+				<input name="name" required placeholder="Ваше имя" type=text><!-- name обязателен, но названия не могут повторяться в одной и той же форме --><!-- name нужен для того, чтобы на сайте все работало нормально, данный тег нужен для внутренней работы сайта -->
+				<input name="phone" required placeholder="Ваш телефон" type=tel>
+				<input name="email" required placeholder="Ваш E-mail" type=email>
+
+				<!-- <input type="submit" value="Заказать консультацию"> --><!-- Можно кнопку для отправки сделать двумя способами: или инпут или кнопка -->
+				<button class="button button_submit">Заказать консультацию</button>
+			</form>
+		</div>
+	</div>
+	<div class="pep">
+		<div class="container">
+			<h2>dfgfdf</h2>
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nemo? Debitis accusamus commodi dolore fuga consequuntur voluptatum voluptate eos incidunt? Veniam excepturi in exercitationem cum ipsam repudiandae cumque, doloribus assumenda.
+			<form action="">
+				<input type="text">
+			</form>
+		</div>
+	</div>
+</body> 
 </html>
