--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
 	<title>Puls</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	<div class="promo">
+	<section class="promo">
 		<div class="container">
 			<header class="header">
 				<div href="#" class="header__logo">
@@ -53,9 +54,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="advantages">
+	<section class="advantages">
 		<div class="container">
 			<h2 class="title">
 				Наши преимущества
@@ -90,8 +91,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="consultat">
+	</section>
+
+	<section class="consultation">
 		<div class="container">
 			<h2 class="title title_left">
 				Получите бесплатную консультацию <br>
@@ -110,15 +112,32 @@
 				<button class="button button_submit">Заказать консультацию</button>
 			</form>
 		</div>
-	</div>
-	<div class="pep">
-		<div class="container">
-			<h2>dfgfdf</h2>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, nemo? Debitis accusamus commodi dolore fuga consequuntur voluptatum voluptate eos incidunt? Veniam excepturi in exercitationem cum ipsam repudiandae cumque, doloribus assumenda.
-			<form action="">
-				<input type="text">
-			</form>
+	</section>
+
+<section class="carousel">
+	<div class="container"><!-- Нужен, чтобы содержимое отображалось по центру -->
+		<div class="carousel__inner">
+			<div>
+				<img src="img/slide_1.jpg" alt="">
+			</div>
+			<div>
+				<img src="img/slide_2.jpg" alt="">
+			</div>
+			<div>
+				<img src="img/slide_3.jpg" alt="">
+			</div>
 		</div>
 	</div>
+</section>
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+<script src="js/slick.min.js"></script>
+
+<script src="js/script.js"></script>
+<!-- Нужно подключать в определенной последовательности: сначала подключаем библиотеку джейкверри, потом файл данной библиотеки и после 
+того только свои файлы. В другой последовательности работать не будет -->
 </body> 
 </html>
