--- a/src/index.html
+++ b/src/index.html
@@ -114,29 +114,29 @@
 		</div>
 	</section>
 
-<section class="carousel">
-	<div class="container"><!-- Нужен, чтобы содержимое отображалось по центру -->
-		<div class="carousel__inner">
-			<div>
-				<img src="img/slide_1.jpg" alt="">
-			</div>
-			<div>
-				<img src="img/slide_2.jpg" alt="">
-			</div>
-			<div>
-				<img src="img/slide_3.jpg" alt="">
+	<section class="carousel">
+		<div class="container"><!-- Нужен, чтобы содержимое отображалось по центру -->
+			<div class="carousel__inner">
+				<div>
+					<img src="img/slide_1.jpg" alt="">
+				</div>
+				<div>
+					<img src="img/slide_2.jpg" alt="">
+				</div>
+				<div>
+					<img src="img/slide_3.jpg" alt="">
+				</div>
 			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script><!-- Нужно писать путь с https, чтобы пути рабтали, когда будешь открывать просто файл html -->
 
-<script src="js/slick.min.js"></script>
+	<script src="js/slick.min.js"></script>
 
-<script src="js/script.js"></script>
+	<script src="js/script.js"></script>
 <!-- Нужно подключать в определенной последовательности: сначала подключаем библиотеку джейкверри, потом файл данной библиотеки и после 
 того только свои файлы. В другой последовательности работать не будет -->
 </body> 
