--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Puls</title>
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/font.css">
@@ -130,13 +131,13 @@
 		</div>
 	</section>
 
-	<secction class="catalog">
+	<section class="catalog">
 		<div class="container">
 			<h2 class="title">Каталог пульсометров</h2>
 			<ul class="catalog__tabs">
-				<li class="catalog__tab catalog__tab_active"><div>Для фитнеса</div></li><!-- Текст помещаем в дивы, чтобы на них не распространялось свойство искажения, как на список -->
+				<li class="catalog__tab catalog__tab_active"><div class="ttb">Для фитнеса</div></li><!-- Текст помещаем в дивы, чтобы на них не распространялось свойство искажения, как на список -->
 				<li class="catalog__tab"><div>Для бега</div></li>
-				<li class="catalog__tab"><div>Для триатлона</div></li>
+				<li class="catalog__tab"><div class="ttb">Для триатлона</div></li>
 			</ul>
 			<div class="catalog__content catalog__content_active">
 				<div class="catalog-item">
@@ -811,7 +812,73 @@
 				</div>
 			</div>
 		</div>
-	</secction>
+	</section>
+
+	<section class="callback">
+		<div class="container">
+			<h2>Отзывы клиентов</h2>
+				<div class="callback__item">
+					<img src="img/feed_1.png" alt="">
+					<div class="callback__descr">
+						<div class="callback__name">
+							Ирина Иванченко
+						</div>
+						<div class="callback__info">
+							2 полумарафона
+						</div>
+						<div class="callback__back">
+							Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.
+							Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же 
+							<br><br>
+							Новые цели - новый гаджет!
+							<br><br>
+							Спасибо, RunSmart! 
+						</div>
+					</div>
+				</div>
+				<div class="callback__item">
+					<img src="img/feed_2.png" alt="">
+					<div class="callback__descr">
+						<div class="callback__name">
+							Иван семочкин
+						</div>
+						<div class="callback__info">
+							1 полумарафон
+						</div>
+						<div class="callback__back">
+							Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+							Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. 
+							<br><br>
+							С ними подготовился к своему первому полумарафону! Спасибо!!!
+						</div>
+					</div>
+				</div>
+				<div class="callback__item">
+					<img src="img/feed_3.png" alt="">
+					<div class="callback__descr">
+						<div class="callback__name">
+							Юлия Дашкина
+						</div>
+						<div class="callback__info">
+							2 полумарафона
+						</div>
+						<div class="callback__back">
+							Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+							<br><br>
+							Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться! 
+							<br><br>
+							Спасибо!!!
+						</div>
+					</div>
+				</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<!-- <div class="footer__map"></div> --><!-- Если нужно застилизовать карту, то помещаем в данный див с таким классом -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.378166339851!2d37.56452458275194!3d55.76273494846605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a2ce2ad9831%3A0x94fb1ec7052ac3d5!2z0YPQuy4g0JrRgNCw0YHQvdCw0Y8g0J_RgNC10YHQvdGPLCDQtC4gNDQsINGB0YLRgC4gMywg0YEzLCDQnNC-0YHQutCy0LAsIDEyMzAyMg!5e0!3m2!1sru!2sru!4v1654245052444!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen=""></iframe>
+		<div class="footer__info"></div>
+	</footer>
 
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
