--- a/src/index.html
+++ b/src/index.html
@@ -813,6 +813,23 @@
 		</div>
 	</secction>
 
+	<footer class="footer">
+		<!-- <div class="footer__map"></div> --><!-- Если нужно застилизовать карту, то помещаем в данный див с таким классом -->
+		<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.378166339851!2d37.56452458275194!3d55.76273494846605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a2ce2ad9831%3A0x94fb1ec7052ac3d5!2z0YPQuy4g0JrRgNCw0YHQvdCw0Y8g0J_RgNC10YHQvdGPLCDQtC4gNDQsINGB0YLRgC4gMywg0YEzLCDQnNC-0YHQutCy0LAsIDEyMzAyMg!5e0!3m2!1sru!2sru!4v1654245052444!5m2!1sru!2sru" width="100%" height="630" style="border:0;" allowfullscreen=""></iframe> -->
+		<!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A3f9ba927095186da5d9662529cae42d0cd29c37ead197a3d16a64dbdd4e885f7&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe>
+		<div class="footer__info"></div> -->
+		<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A3f9ba927095186da5d9662529cae42d0cd29c37ead197a3d16a64dbdd4e885f7&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+		<div class="footer__info">
+			<address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+			<a href="tel:84999228974" class="footer__phone">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt=""></a>
+				<a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt=""></a>
+				<a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt=""></a>
+			</div>
+		</div>
+	</footer>
+
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script><!-- Нужно писать путь с https, чтобы пути рабтали, когда будешь открывать просто файл html -->
