Добавление валидационного js

--- a/src/index.html
+++ b/src/index.html
@@ -927,6 +927,7 @@
 	<script src="js/slick.min.js"></script>
 
 	<script src="js/script.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
 <!-- Нужно подключать в определенной последовательности: сначала подключаем библиотеку джейкверри, потом файл данной библиотеки и после 
 того только свои файлы. В другой последовательности работать не будет -->
 </body> 
