--- a/src/index.html
+++ b/src/index.html
@@ -921,7 +921,7 @@
 		</div>
 	</div>
 	<a href="#up" class="pageup">
-		<img src="icons/increase.svg" alt="">
+		<img src="icons/increase.svg" alt="up">
 	</a>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -930,6 +930,7 @@
 	<script src="js/slick.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
 
 
