--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -73,7 +74,7 @@
 					</div>
 				</div>
 				<div class="advantages__item">
-					<img src="icons/advantages/heart.png" alt="">
+					<img src="icons/advantages/heart.png" alt="" class="advantages__icon_animated">
 					<div class="advantages__subtitle">
 						Заботимся о здоровье
 					</div>
@@ -915,7 +916,7 @@
 			</form>
 		</div>
 		<div class="modal modal_mini" id="thanks">
-			<div class="modal__close">&times</div><!-- Мы прописали его, как текстовый символ, по этому. можем его персонализировать -->
+			<div class="modal__close">&times</div><!-- Мы прописали его, как текстовый символ, по этому. можем его персонализировать up-->
 			<div class="modal__subtitle">Спасибо за вашу заявку!</div>
 			<div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
 		</div>
