--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 					<img src="icons/logo.png" alt="logo">
 				</a>
 				<div class="header__official">
-					Официальный представитель
+					Официальный Представитель
 					<span>Garmin, Polar, Suunto</span>
 				</div>
 				<div class="header__contacts">
