--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 				<div class="promo__icons">
 					<div class="promo__icon">
 						<img src="icons/main_screen/timer.png" alt="">
-						Время подбора:
+						Время Подбора:
 						10 минут
 					</div>
 					<div class="promo__icon">
